google map added new component map included

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,8 @@
       "es2016",
       "dom"
     ]
+  },
+  "map": {
+    "@ng-bootstrap/ng-bootstrap": "node_modules/@ng-bootstrap/ng-bootstrap/bundles/ng-bootstrap.js"
   }
 }
