Running in docker docker build -t buildingspot . docker run -d --name buildingspot -p 4300:4300 buildingspot:dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,4 @@ client:
         - "4300:4300"
     volumes:
         - .:/usr/src/building-spot
-    command: [ng serve -port 4300]
+    command: [npm start]
